# monorepo-experiments

./: .gitignore  README.md
bazel/: .bazelignore  .bazelrc  MODULE.bazel
bazel/eng/hello/c/: BUILD
bazel/eng/hello/deno/: BUILD.1
bazel/eng/hello/rlib/: BUILD
bazel/eng/hello/rust2/: BUILD
bazel/eng/hello/static/: BUILD
bazel/eng/toolchain/: clang_defs.bzl  clang_toolchain.bzl  deno.bzl  platform_select.bzl  platforms.bzl  repo_deps.bzl
buck2/: .buckconfig  BUCK
buck2/templates/cpp/: BUCK
buck2/templates/static/: BUCK
buck2/toolchains/: BUCK  BUCK.old  zig_toolchain.bzl
just/: .gitignore  Cargo.toml  deno.json  justfile
just-refined/: .gitignore  deno.json
just/eng/: mod.just
just/eng/core/: notes.md
just/eng/cpp_lib/: CMakeLists.txt  mod.just
just/eng/dhello/: main.ts
just/eng/dhello2/: main.ts
just/eng/hello/: mod.just
just/eng/world/: Cargo.toml  build.rs  mod.just
